infra/gateway-api/config/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: waypoint
  namespace: gateway
  labels:
    istio.io/waypoint-for: service
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  gatewayClassName: istio-waypoint
  listeners:
    - name: mesh
      port: 15008
      protocol: HBONE

    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.minikube"
      allowedRoutes:
        namespaces:
          from: All

    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.minikube"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: minikube-wildcard-tls
